----------------------------------------------------------------------
 OmegaT 2.5.0 update 3
----------------------------------------------------------------------
   5 Enhancements
   2 Bug fixes
   0 Localisation update
----------------------------------------------------------------------
2.5.0 update 3 vs. 2.5.0 update 2

  Implemented requests:

  - TMX: match other languages if no project target language
  http://sourceforge.net/support/tracker.php?aid=2700699
  
  - HTML filter: translate label attribute of OPTION/OPTGROUP/MENU tag
  http://sourceforge.net/support/tracker.php?aid=3436499

  Other enhancements:

  - Empty translations are now allowed. They are displayed as <EMPTY>
in the Editor. To create one, right-click in a segment, and select
"Set empty translation". The same popup menu also allows to Delete an
existing translation. It has the same effect as emptying the target 
segment, and then pressing Enter.

  - Five scripts from the Scripting plugin can now be displayed and 
launched directly under the Scripting menu entry. Requires version
0.3-2.5.0_03 of the scripting plugin.

  - It is now possible to create glossary plugins

  Bug fixes:

  - Translations from non-target-language are not loaded
  http://sourceforge.net/support/tracker.php?aid=3414344

  - Fuzzy match were inserted even if the segment was already translated

----------------------------------------------------------------------
 OmegaT 2.5.0 update 2
----------------------------------------------------------------------
   0 Enhancement
   2 Bug fixes
   0 Localisation update
----------------------------------------------------------------------
2.5.0 update 2 vs. 2.5.0 update 1

  Bug fixes:

  - The "level1" export TMX contained OmegaT tags instead of containing
no tags at all

  - ResX filter no longer working since revision 3508
  http://sourceforge.net/support/tracker.php?aid=3430364

----------------------------------------------------------------------