@@ -1477,6 +1477,7 @@ MT_ENGINE_BELAZAR=Belazar
 MT_ENGINE_APERTIUM=Apertium
 
 APERTIUM_ERROR=Error {0}: {1}
+GOOGLE_ERROR=Error {0}: {1}
 
 # LanguageTool
 LT_OPTIONS_MENU_ENABLED=Language Checker
